--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,105 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,100;1,300;1,400;1,500;1,700&display=swap');
+
+*{
+    margin: 0;
+    padding: 0;
+    font-family: 'Roboto', sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+#main {
+    display: flex;
+    height: 100vh;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(0, 0, 0);
+    
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+#container {
+    display: flex;
+    width: 50vw;
+    height: 90%;
+    border: 10px rgb(21, 104, 143) solid;
+    border-radius: 5%;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    text-align: center;
+    background-color: rgb(0, 0, 0);
+    color: white;
+    font-size: 16px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+#btn-container {
+    display: flex;
+    justify-content: space-evenly;
+    width: 300px;
+    margin-top: 20px;
 }
 
-.App-link {
-  color: #61dafb;
+#subtract-btn {
+    padding: 10px 10px;
+    border: none;
+    border-radius: 6px;
+    color: white;
+    background-color: #4CAF50;
+    font-size: 16px;
+    text-align: center;
+    text-decoration: none;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#add-btn {
+    padding: 10px 10px;
+    border: none;
+    border-radius: 6px;
+    color: white;
+    background-color: #008CBA;
+    font-size: 16px;
+    text-align: center;
+    text-decoration: none;
+}
+
+#reset-btn {
+    padding: 10px 10px;
+    width: 88.48px;
+    border: none;
+    border-radius: 6px;
+    background-color: #f44336;
+    color: white;
+    font-size: 16px;
+    text-align: center;
+    text-decoration: none;
+}
+
+#question-btn {
+    padding: 10px 10px;
+    border: none;
+    border-radius: 7px;
+    color: white;
+    background-color: #c29a19;
+    font-size: 16px;
+    text-align: center;
+    text-decoration: none;
+}
+
+.q-p-a {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    height: 200px;
+}
+
+@media screen and (max-width: 600px) {
+
+    #container { width: auto; }
+
+    #btn-container {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    #reset-btn { width: auto; }
+
+    .q-p-a { height: auto; }
 }
